新增音频采集能力接入